<resources>
    <string name="app_name">RoyalIdeas</string>
    <string name="Main">Main</string>
    <string name="About">About</string>
    <string name="branch">branch</string>
    <string name="contactus">contact us</string>
    <string name="products">products</string>
    <string name="product">product</string>

    <string name="height">Height</string>
    <string name="width">Width</string>

    <string name="name">name</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="email">E-mail</string>


</resources>
