<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="1"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.royalideas.fragments.ContactUS">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/name"
            android:textSize="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext"
            android:gravity="start|center"
            android:textAlignment="textStart"
            android:textSize="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20dp"
            android:layout_gravity="start"
            android:text="@string/email"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/textView2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/email"
            android:textSize="15dp"
            android:background="@drawable/edittext"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20dp"
            android:layout_gravity="start"
            android:text="@string/subject"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/textView3"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:background="@drawable/edittext"
            android:id="@+id/subject"
            android:textAlignment="textStart"
            android:gravity="start|center"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20dp"
            android:layout_gravity="start"
            android:text="@string/message"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/subject"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/textView4"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:textSize="15dp"
            android:background="@drawable/edittext"
            android:id="@+id/message"
            android:inputType="textMultiLine"
            android:textAlignment="textStart"
            android:gravity="start|center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:id="@+id/send"
            android:textColor="@color/fontcolor"
            android:background="@drawable/roundedbuttonaccent"
            android:text="@string/send"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/message"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/footer"
        android:adjustViewBounds="true"
        android:layout_gravity="bottom"/>

</LinearLayout>
